细节完善 准备做datatables行内编辑扩展信息

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
-1、增加两类资产导入管理：等保系统和网吧，服务器资产改名IDC。修改后共有4类资产：等保系统、LED、IDC、网吧；
-2、资产管理增加：增加、修改、删除功能；
-3、资产管理增加上传照片功能；
-4、资产管理增加4种颜色编辑，具体颜色代表的意义使用者负责。并适当地在地图上显示；
-5、管理页增加按地址搜索功能
+1、增加两类资产导入管理：等保系统和网吧，服务器资产改名IDC。修改后共有4类资产：等保系统、LED、IDC、网吧；OK
+2、资产管理增加：增加、修改、删除功能；OK
+3、资产管理增加上传照片功能；OK
+4、资产管理增加4种颜色编辑，具体颜色代表的意义使用者负责。并适当地在地图上显示；OK
+5、管理页增加按地址搜索功能;OK
 6、地图增加卫星地图选项；
 7、其他：寻找云埔、长岭、龙湖、九佛等街道边界；边界线加粗；地图上用合适、特征明确的图标；地图上资产信息显示优化。
